--- a/Index.html
+++ b/Index.html
@@ -118,8 +118,7 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              I am a employee of Akij Venture Group as Senior Software Engineer. I starting my job in this company at 1st April 2023 
             </p>
           </div>
         </div>
